gcc/testsuite/rust/rustc/ui/closures/coerce-unsafe-closure-to-unsafe-fn-ptr.rs
fn main() {
    let _: unsafe fn() = || { ::std::pin::Pin::new_unchecked(&0_u8); };
// { dg-error ".E0133." "" { target *-*-* } .-1 }
    let _: unsafe fn() = || unsafe { ::std::pin::Pin::new_unchecked(&0_u8); }; // OK
}

